--- a/src/components/Molecules/DownloadPanel/styles.module.css
+++ b/src/components/Molecules/DownloadPanel/styles.module.css
@@ -2,10 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  background-color: #1B1C1C; /* Set your desired background color */
-  padding: 38px 0px 0 47px;
+  width: 98%;
+  background-color: #1B1C1C; 
+  padding: 44px 0px 0px 49px;
   border-radius: 8px;
-  margin-left: 30px;
+  margin-left: 25px;
   height: 100%;
   position: relative;
   flex: 1;
