--- a/src/components/Molecules/Search/styles.module.css
+++ b/src/components/Molecules/Search/styles.module.css
@@ -12,11 +12,10 @@
   font-size: var(--regular-font-size);
   font-weight: var(--medium-font-weight);
   right: 0.5rem;
-  top: 50%;
+  /* top: 50%; */
   transform: translateY(-50%);
-  padding: 0.5rem 1rem;
+  padding: 1rem 1.5rem;
   margin: 0;
-  height: calc(100% - 1rem);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,13 +114,14 @@
 
 .searchStartMining .searchContainer {
   display: flex;
-  justify-content: center;
-  position: relative;
+  justify-content: space-between; 
+  align-items: stretch;
   width: 100%;
+  gap: 0.5rem;
 }
 
 .searchStartMining .searchButtonDesktop {
-  right: 0.5rem;
+  margin-left: 0.5rem;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -130,6 +130,7 @@
   flex: 1;
   background-color: var(--dark-rgb-600);
   color: var(--white);
+  padding: 0.45rem 5.6rem 0.45rem 3.2rem;
 }
 
 .searchStartMining .searchInput::placeholder {
@@ -140,6 +141,16 @@
   background-color: var(--ifm-guide-btn-color);
   color: var(--ifm-color-primary);
   border-radius: var(--ifm-global-radius);
+  flex-shrink: 0; 
+  position: relative;
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  height: auto; 
+  box-sizing: border-box; 
 }
 
 .searchStartMining .searchButton:hover {
@@ -184,9 +195,9 @@
 }
 
 .searchPayments .searchButtonDesktop {
-  right: 0.5rem;
+  margin-left: 0.5rem;
   top: 50%;
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
 }
 
 .searchWalletMobile {
@@ -215,10 +226,19 @@
 
 @media screen and (max-width: 768px) {
   .searchInput{
-    padding: 1rem 5.6rem 1rem 2.6rem;
+    padding: 1rem 5rem 1rem 2.6rem;
+  }
+  .searchStartMining .searchContainer{
+    flex-direction: column ;
+  }
+
+  .searchStartMining .searchIconWrapper{
+    top: 24%;
+
   }
   .searchStartMining .searchButtonWalletMobile {
-    margin-top: 1rem;
+    margin-top: 0.3rem;
+    padding: 1rem 1.5rem;
     width: 100%;
     position: relative;
     right: auto;
@@ -232,6 +252,7 @@
 
   .searchStartMining .searchInput {
     width: 100%;
+    padding: 1rem 5rem 1rem 3.2rem;
   }
 
   .searchWallet .searchButton {
@@ -242,7 +263,7 @@
 @media screen and (min-width: 1600px) {
   .searchWallet .searchButtonDesktop,
   .searchStartMining .searchButtonDesktop {
-    right: 0.5rem;
+    margin-left: 0.5rem;
   }
 }
 
@@ -253,15 +274,16 @@
   
   .searchButton {
     position: absolute;
-    right: 0.5rem;
+    margin-left: 0.5rem;
     top: 50%;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
   }
   
   .searchWallet .searchButton,
   .searchStartMining .searchButton,
   .searchPayments .searchButton {
-    position: absolute;
-    right: 0.5rem;
+    position: relative;
+    margin-left: 0.5rem;
+    transform: translateY(0%);
   }
 }
